Gift wrapping css fixes

--- a/web/css/pages/_cart.less
+++ b/web/css/pages/_cart.less
@@ -61,6 +61,18 @@
                 order: -1;
             }
         }
+        .gift-wrapping {
+            .gift-options-content {
+                margin: @2 0 @3;
+            }
+            .gift-printed-card {
+                margin-top: @1;
+            }
+        }
+        .gift-summary .price-box,
+        .gift-options .price-box {
+            margin-left: @5;
+        }
         .cart.actions {
             &:extend(.actions-toolbar);
             padding-top: @3;
